--- a/amp_mobile/main.html
+++ b/amp_mobile/main.html
@@ -51,26 +51,12 @@
 <body ng-app="amp" ng-controller="MainController as mCtrl">
 
 <div class="app ampApp">
-    <div class="navbar navbar-app navbar-absolute-top">
+    <div class="navbar navbar-app navbar-absolute-top" ng-if="mCtrl.headerShow">
         <!--nav top-->
-        <div >
-            <div class="navbar-brand navbar-brand-center">
-                {{mCtrl.title}}
-            </div>
-            <div class="btn-group pull-left">
-                <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
-                   <i class="navOpt-icon navOpt-icon-back"></i>
-                </div>
-            </div>
-            <div class="btn-group pull-right" ui-yield-to="navbarAction">
-                <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle">
-                    <!--<i class="navOpt-icon navOpt-icon-doc-create"></i>-->
-                    <i class="navOpt-icon navOpt-icon-filter"></i>
-                </div>
-            </div>
+        <div ui-view="header">
         </div>
     </div><!-- nav top-->
-    <div class="navbar navbar-app navbar-absolute-bottom">
+    <div class="navbar navbar-app navbar-absolute-bottom" ng-if="mCtrl.bottomShow">
         <!--nav bottom-->
         <div class="btn-group justified">
             <a ng-repeat="menuItem in mCtrl.menu" class="btn btn-navbar" ui-sref="{{menuItem.links}}" ui-sref-active="active">
@@ -87,6 +73,7 @@
             <i class="fa fa-spinner fa-spin loading-spinner"></i>
         </div>
         <div class='app-content'>
+
             <div class="scrollable">
                 <div class="scrollable-content">
                     <div ui-view="content"  class="animated" ng-class="{'view-back': state.back, 'view-to-home': state.toHome, 'view-exit': state.exit, 'fadeOut': state.exit,'fadeIn': state.enter, 'view-enter': state.enter, 'view-loading': state.loading}"></div>
