--- a/app/message_window.html
+++ b/app/message_window.html
@@ -12,12 +12,12 @@
         // 当文档加载完毕, 给父级来源发送信息。
         window.addEventListener('load', function(e){
             console.log("load-----------")
-            e.currentTarget.opener.postMessage('ready', 'http://192.168.120.241:3000');
+            e.currentTarget.opener.postMessage('ready', 'http://localhost:63342');
         }, false);
 
         // 当窗体关闭，告诉父级窗体已经关闭了。
         window.addEventListener('unload', function(e){
-            e.currentTarget.opener.postMessage('closed', 'http://192.168.120.241:3000');
+            e.currentTarget.opener.postMessage('closed', 'http://localhost:63342');
         }, false);
     </script>
 </head>
