--- a/app/main/main_ag.html
+++ b/app/main/main_ag.html
@@ -30,6 +30,7 @@
                 <tr ng-repeat="project in listCtrl.projects">
                     <th>
                         <h5 id={{$index}}>{{project.name}}</h5>
+                        <span class="t-sub text-left">{{project.position}}</span>
                         <div class="t-opt">
                             <span><a href="amp_main_ag.html?projectid={{$index}}#/noi">进入详情</a>|<a href="#/update/{{$index}}">修改信息</a></span>
                         </div>
