--- a/app/main/main_ag.html
+++ b/app/main/main_ag.html
@@ -4,6 +4,10 @@
     <div class="ys-main-panel">
         <div class="ys-content-header">
             <h1><em class="ys-icon ys-icon-amp"></em></h1>
+            <div class="header-right">
+                <a class="ys-user" id="ys-user">用户名</a>
+                <a class="ys-logout" id="ys-logout">退出</a>
+            </div>
         </div>
         <div class="ys-content-panel container clearfix">
 
