--- a/app/main/create_project.html
+++ b/app/main/create_project.html
@@ -28,6 +28,8 @@
                                 <label>团队人数</label>
                                 <input ng-model="ctrl.project.pm.teamNum" type="number" placeholder="" value="">
                             </div>
+                            <a class="btn amp-btn amp-btn-lg amp-btn-save amp-btn-reverse" style="width:50%;margin-top:30px;float:right;" ng-click="ctrl.cancel()">返回
+                            </a>
                         </div>
                     </div><!--col-xs-6-->
                     <div class="col-xs-6">
@@ -59,11 +61,13 @@
                                 <label>位置</label>
                                 <input ng-model="ctrl.project.position" type="text" placeholder="" value="">
                             </div>
+                            <a class="btn amp-btn amp-btn-lg amp-btn-save" id="btn-amp-create" ng-click="ctrl.saveCheck()"  style="width:50%;margin-top:30px;float:left;">保存
+                            </a>
                         </div>
                     </div><!--col-xs-6-->
 
             </div>
-            <div class="amp-opt-block clearfix">
+          <!--  <div class="amp-opt-block clearfix">
                 <div class="amp-btn-group col-xs-6 col-xs-offset-6">
                     <button   ng-click="ctrl.cancel()"  type="submit" href="main.html" class="btn amp-btn amp-btn-lg amp-btn-save amp-btn-reverse"  id="btn-amp-cancel">取消
                     </button>
@@ -71,8 +75,8 @@
                     </button>
                 </div>
 
-               <!-- <em class="ys-amp-icon ys-icon-tips ys-tips" data-toggle="tooltip" data-placement="right" title="新建项目功能将于12月6日开通" style="margin-top: -11px;left: 50%;margin-left:145px;"></em>-->
-            </div>
+               &lt;!&ndash; <em class="ys-amp-icon ys-icon-tips ys-tips" data-toggle="tooltip" data-placement="right" title="新建项目功能将于12月6日开通" style="margin-top: -11px;left: 50%;margin-left:145px;"></em>&ndash;&gt;
+            </div>-->
             </form>
         </div><!--end content-panel-->
 
